src/test/deca/syntax/invalid/double_semi.deca
//  Description :
//            Deux ; séparés seulement par un espace sur la même ligne
//
// Résultat:
//Ne doit pas passer
//
{
    int a ;;
}